# RequestTrackerUtils

./: .env.example  .envrc  .gitignore  CLAUDE.md  CLEANUP_COMPLETE.md  DEVICE_STUDENT_INTEGRATION.md  FLAKE_IMPROVEMENTS.md  FLASK_REFERENCE_DESIGN.md  FLASK_STUDENT_DEVICES_DOCUMENTATION.md  FLASK_UX_ENHANCEMENTS.md  LICENSE  MANIFEST.in  README.md  UI_ENHANCEMENTS_COMPLETE.md  VISUAL_TRANSFORMATION_SUMMARY.md  asset_utils.py  assets.db  cookies.txt  database.sqlite  devenv.nix  flake.nix  integration_demo_scenario.md  integration_summary.md  manage.py  pyproject.toml  quickstart.go  run.py  test_auth.py  test_csv_debug.py  test_csv_import.py  test_device_integration.py  test_device_owner_lookup.py  test_integration.py  test_lookup.py  test_rt_api.fish  test_sample.csv
.github/: copilot-instructions.md
.github/agents/: copilot-instructions.md
.specify/memory/: constitution.md
.specify/templates/: plan-template.md
app/: __init__.py  __main__.py  config.py  database.py  schema.sql
app/routes/: __init__.py  tag_routes.py
app/templates/: base.html
app/utils/: pdf_generator.py
apps/assets/: urls.py  views.py
apps/audit/: admin.py  models.py  tests.py  tracker.py  urls.py  validators.py  views.py
apps/authentication/: __init__.py  admin.py  apps.py  decorators.py  ldap_client.py  middleware.py  models.py  urls.py  views.py
apps/common/: middleware.py
apps/devices/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
apps/labels/: urls.py  utils.py  views.py
apps/students/: admin.py  models.py  resources.py  urls.py  views.py
cache/: asset_cache.json
common/: middleware.py  rt_api.py
docs/: AUTHENTICATION.md  asset_creation_fix_summary.md  automatic_label_printing_implementation.md  google_admin_integration.md
docs/architecture/: assets.md  devices.md  (+6 more)
request_tracker_utils/: __init__.py  __main__.py  auth.py  celery.py  config.py  pyproject.toml
rtutils/: asgi.py  settings.py  urls.py  views.py  wsgi.py
scripts/: GOOGLE_ADMIN_CONFIG.md  RT_USER_SYNC_README.md  add_battery_health_field.py  backfill_audit_names.py  check_funding_source.py  check_test_asset.py  csv_battery_collector_updated.py  gam_battery_collector.py  inspect_asset_fixed.py  inspect_rt_fields.py  list_custom_fields.py  local_prestart.sh  migrate_csv_logs.py  migrate_student_data.py  rtutils-manage.template  rtutils_diagnostics.sh  scheduled_chromebook_sync.fish  scheduled_rt_user_sync.py  sync_chromebook_data.py  sync_rt_users.sh  test_battery_data.py  test_create_student_device.py  test_dual_battery_update.py  test_minimal_asset.py  test_single_battery_field.py  test_single_battery_update.py  test_sqlite.py  update_all_labels.py  update_rt_user_custom_fields.py
templates/: base.html  home.html
(+164 files in other folders)
