[project]
name = "rt-aset-utils"
version = "0.1.0"
description = "Asset Utils for Request Tracker!"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=1.5.0",
    "requests>=2.28.0",
    "flask>=2.2.0",
    "click>=8.0.0",
    "reportlab>=3.6.0",
    "qrcode>=7.3.1",
    "python-barcode>=0.13.1",
    "python-dotenv>=1.0.1"
    
]
